--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,5 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+  - title: "GitHub"
+    url: https://github.com/awbmilne/awbmilne.github.io
