--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,4 +8,6 @@ main:
   - title: "About"
     url: /about/
   - title: "GitHub"
-    url: https://github.com/awbmilne/awbmilne.github.io
+    url: https://github.com/awbmilne
+  - title: "GitLab"
+    url: https://gitlab.com/awbmilne
